# sqllite-rust

./: Cargo.toml  LICENSE  Makefile  PLAN.md  README.md
sqllite-cli/: Cargo.toml
sqllite-cli/src/: main.rs
sqllite-core/: Cargo.toml
sqllite-core/src/: compile.rs  compile_select.rs  connection.rs  constants.rs  error.rs  lib.rs  pragma.rs  record.rs  schema.rs  types.rs  varint.rs
sqllite-core/src/io/: mod.rs  unix.rs
sqllite-core/src/storage/: btree.rs  header.rs  mod.rs  pager.rs  wal.rs
sqllite-core/src/vdbe/: exec.rs  mod.rs  program.rs
sqllite-parser/: Cargo.toml
sqllite-parser/src/: ast.rs  lexer.rs  lib.rs
sqllite-parser/src/parser/: mod.rs  parser_impl.rs
sqllite-tests/: Cargo.toml
sqllite-tests/src/: lib.rs  main.rs
sqllite-tests/tests/: run_all.rs
tests/: README.md  basic.test
tests/ddl/: create.test  drop.test
tests/dml/: delete.test  insert.test  select.test  update.test
tests/expr/: arithmetic.test  compare.test
tests/types/: storage.test
