[workspace]
resolver = "2"
members = [
    "sqllite-core",
    "sqllite-parser",
    "sqllite-cli",
    "sqllite-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["sqllite-rust contributors"]

[workspace.dependencies]
sqllite-core = { path = "sqllite-core" }
sqllite-parser = { path = "sqllite-parser" }
thiserror = "1"
logos = "0.14"
memchr = "2"
parking_lot = "0.12"
tempfile = "=3.10.1"
clap = { version = "=4.4.18", features = ["derive"] }
anyhow = "1"
getrandom = "=0.2.15"
