[package]
name = "sqllite-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line shell for sqllite-rust"

[[bin]]
name = "sqllite3"
path = "src/main.rs"

[dependencies]
sqllite-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
