[package]
name = "sqllite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure Rust SQLite-compatible database engine"

[dependencies]
sqllite-parser = { workspace = true }
thiserror = { workspace = true }
memchr = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
